--- a/index.html
+++ b/index.html
@@ -1,18 +1,84 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accordion</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="menu">
-    <ul>
-      <li>Menu 1</li>
-      <li>Menu 2</li>
-      <li>Menu 3</li>
-      <li>Menu 4</li>
-    </ul>
+  <div class="navigation">
+    <div class="wrap clear-box">
+      <div class="header-icon">
+        <a href="#"><img src="images/request-a-sample--547-p.jpg" width="" height="" alt=""></a>
+      </div>
+      <div class="menu-icon"><img src="images/Hamburger_icon.svg.png" width="" height="" alt=""></div>
+      <ul class="menu">
+        <li><a href="">Menu 1</a>
+          <ul class="sub-menu">
+            <li><a href="#">Sub menu 1</a>
+              <ul class="child-sub-menu">
+                <li><a href="#">Child sub menu 1</a></li>
+                <li><a href="#">Child sub menu 2</a></li>
+                <li><a href="#">Child sub menu 3</a></li>
+                <li><a href="#">Child sub menu 4</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Sub menu 2</a>
+              <ul class="child-sub-menu">
+                <li><a href="#">Child sub menu 5</a></li>
+                <li><a href="#">Child sub menu 6</a></li>
+                <li><a href="#">Child sub menu 7</a></li>
+                <li><a href="#">Child sub menu 8</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Sub menu 3</a>
+              <ul class="child-sub-menu">
+                <li><a href="#">Child sub menu 9</a></li>
+                <li><a href="#">Child sub menu 10</a></li>
+                <li><a href="#">Child sub menu 11</a></li>
+                <li><a href="#">Child sub menu 12</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Sub menu 4</a>
+              <ul class="child-sub-menu">
+                <li><a href="#">Child sub menu 13</a></li>
+                <li><a href="#">Child sub menu 14</a></li>
+                <li><a href="#">Child sub menu 15</a></li>
+                <li><a href="#">Child sub menu 16</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="">Menu 2</a>
+          <ul class="sub-menu">
+            <li><a href="#">Sub menu 1</a></li>
+            <li><a href="#">Sub menu 2</a></li>
+            <li><a href="#">Sub menu 3</a></li>
+            <li><a href="#">Sub menu 4</a></li>
+          </ul>
+        </li>
+        <li><a href="">Menu 3</a>
+          <ul class="sub-menu">
+            <li><a href="#">Sub menu 1</a></li>
+            <li><a href="#">Sub menu 2</a></li>
+            <li><a href="#">Sub menu 3</a></li>
+            <li><a href="#">Sub menu 4</a></li>
+          </ul>
+        </li>
+        <li><a href="">Menu 4</a>
+          <ul class="sub-menu">
+            <li><a href="#">Sub menu 1</a></li>
+            <li><a href="#">Sub menu 2</a></li>
+            <li><a href="#">Sub menu 3</a></li>
+            <li><a href="#">Sub menu 4</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="main-content">
+    
   </div>
   <script src="js/jquery.min.js" type="text/javascript"></script>
   <script src="js/common.js" type="text/javascript"></script>
