--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
   <div class="navigation">
     <div class="wrap clear-box">
-      <div class="header-icon">
-        <a href="#"><img src="images/request-a-sample--547-p.jpg" width="" height="" alt=""></a>
+      <div class="sample">
+        <div class="header-icon">
+          <a href="#"><img src="images/request-a-sample--547-p.jpg" width="" height="" alt=""></a>
+        </div>
+        <div class="menu-icon"><img src="images/Hamburger_icon.svg.png" width="" height="" alt=""></div>
       </div>
-      <div class="menu-icon"><img src="images/Hamburger_icon.svg.png" width="" height="" alt=""></div>
       <ul class="menu">
         <li><a href="">Menu 1</a>
           <ul class="sub-menu">
